Removing Cube project from the projects page, for now

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -161,6 +161,7 @@
          ) 
       }}
 
+      {# Not ready for prime-time!
       {{ project(
            title       = "Cube",
            description = "3D is all the rage these days&mdash;learn how its done in CSS3! Build your own 3D cube from scratch. ", 
@@ -169,6 +170,7 @@
            img         = "/media/img/projects/Cube.jpg",
          ) 
       }}
+      #}
 
 	    {{ project(
            title       = "Make ugly '90s pages pretty",
