Point landing page project images at static assets

--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -29,7 +29,7 @@
            blurb    = "Build your own Creature",
            author   = "London Zoological Society",
            url      = "projects/nesta/zoo",
-           img      = "https://wiki.mozilla.org/images/7/7b/Animalbuilder.jpg",
+           img      = "/media/img/projects/Animalbuilder.jpg",
          ) 
       }}
 
@@ -37,7 +37,7 @@
            blurb    = "Make Your Own Rant Page",
            author   = "Hive NYC",
            url      = url('edit_dev_dropbox_project', 'soapbox'),
-           img      = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
+           img      = "/media/img/projects/soapbox.png", 
          ) 
       }}
 
@@ -45,7 +45,7 @@
            blurb    = "Level up your Web Skills",
            author   = "Mozilla",
            url      = url('webpagemaker.website.views.webarcade'),
-           img      = "https://wiki.mozilla.org/images/e/e3/Webarcade.jpg",
+           img       = "/media/img/projects/Webarcade.png",
          ) 
       }}
     </ul>
