Changed WebPageMaker to Thimble in content guidelines copy.

--- a/webpagemaker/website/templates/website/content-guidelines.html
+++ b/webpagemaker/website/templates/website/content-guidelines.html
@@ -7,7 +7,7 @@
     <h1>Content Guidelines</h1>
 
     <p>
-      From time to time, we have to remove inappropriate content from WebPageMaker. This document describes some of the various types of content that is inappropriate for WebPageMaker. This list is illustrative, not definitive, and we may update it.
+      From time to time, we have to remove inappropriate content from Thimble. This document describes some of the various types of content that is inappropriate for Thimble. This list is illustrative, not definitive, and we may update it.
     </p>
 
     <ol>
