--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="container divider">
-    <div class="row">
+    <div class="row" id="write">
       <div class="span7">
         <h2>
           Write and edit HTML and CSS right in your browser.
@@ -29,7 +29,7 @@
   </div>
 
   <div class="container divider">
-    <div class="row">
+    <div class="row" id="click">
       <div class="span7">
         <h2>
           Share fully functional web pages with one click.
@@ -43,7 +43,7 @@
   </div>
 
   <div class="container divider">
-    <div class="row">
+    <div class="row" id="amazing">
       <div class="span7">
         <h2>
         Webmaking made easy.
@@ -57,7 +57,7 @@
   </div>
 
   <div class="container divider-last">
-    <div class="row">
+    <div class="row" id="involved">
       <div class="span7">
         <h2>
         Get involved
