Productionalized non-NESTA projects and updated template links

--- a/webpagemaker/website/templates/website/webarcade.html
+++ b/webpagemaker/website/templates/website/webarcade.html
@@ -26,7 +26,7 @@
            title       = "Wrangle the HTML",
            description = "HTML is not complicated or difficult to wrangle. In this project you will get a hold of the basics and you might even realize that you know a bit of HTML already.",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'wrangler'),
+           url         = url('edit_project', 'wrangler'),
            img         = "/media/img/projects/wrangle.png",
          ) 
       }}
@@ -34,7 +34,7 @@
            title       = "Hack a Map",
            description = "HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code>. In this project you will begin your journey in the world of HTML by exploring the syntax behind it to activate and customize a broken map and explore brave new webby worlds.",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'map'),
+           url         = url('edit_project', 'map'),
            img         = "/media/img/projects/map.jpg",
          ) 
       }}
@@ -42,7 +42,7 @@
            title       = "Bakery Bash",
            description = "If you are a fan of the web you have already met the loaf cat. A proud owner of a Bakery, the loaf cat is throwing a party&mdash;a Bakery Bash if you will. Unfortunately the guests are all undercover Serious Cats. Bummer! Your goal in this game is to fix the links and clickable images so that they no longer point to the serious cat. Once you are done bring a few more guests and add some music to get this party started!",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'bakery'),
+           url         = url('edit_project', 'bakery'),
            img         = "/media/img/projects/bakery.png",
          ) 
       }}
@@ -50,7 +50,7 @@
            title       = "Avatar-O-Matic",
            description = "There are people who are on the web, and then there are people who MAKE the web. Who do YOU want to be? Your goal in this project is to MAKE your very own webmaker avatar. In this unique blend of HTML agility, CSS and firepower you are going to mix and match the images on this page to create your very own webmaker page and share what you are passionate about making. ",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'avataromatic'),
+           url         = url('edit_project', 'avataromatic'),
            img         = "/media/img/projects/Avataromatic.png",
          ) 
       }}
@@ -58,7 +58,7 @@
            title       = "Make Your Own Meme",
            description = "Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page&mdash;featuring a meme to conquer all internet memes. You might wonder what is a meme? Well a meme refers to an internet phenomena: think viral videos, web celebs, fuzzy animals… So let your inner squirrel, serious cat, Brony or Ryan Gosling “Hey girl,” shine. ",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'meme'),
+           url         = url('edit_project', 'meme'),
            img         = "/media/img/projects/meme.png",
          ) 
       }}
@@ -66,7 +66,7 @@
            title       = "Make ugly '90s pages pretty",
            description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s.",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'stuck'),
+           url         = url('edit_project', 'stuck'),
            img         = "/media/img/projects/Stuck90s.png",
          ) 
       }}
@@ -74,7 +74,7 @@
            title       = "Make your own “webstructable how-to”",
            description = "This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?",
            author      = "Mozilla",
-           url         = url('edit_dev_dropbox_project', 'webstructable'),
+           url         = url('edit_project', 'webstructable'),
            img         = "/media/img/projects/Webstructables.jpg",
          ) 
       }}
