--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -36,7 +36,7 @@
       {{ project(
            blurb    = "Make Your Own Rant Page",
            author   = "Hive NYC",
-           url      = url('edit_dev_dropbox_project', 'soapbox'),
+           url      = url('edit_project', 'soapbox'),
            img      = "/media/img/projects/soapbox.png", 
          ) 
       }}
