--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -51,7 +51,7 @@
            title       = "Awesome Animal Builder",
            description = "Learn about different species and then mix and match animal body parts to create your own&mdash;think: Elephwhal or a Bunnel! ", 
            author      = "The London Zoo",
-           url         = "projects/nesta/zoo",
+           url         = "projects/zoo",
            img         = "/media/img/projects/Animalbuilder.jpg",
          ) 
       }}
@@ -91,7 +91,7 @@
            title       = "Wickedpedia",
            description = "Build your own celebrity bio pages, including all the scandals and gossip that no one knows about! ", 
            author      = "Steve Bunce and Oliver Quinlan (Plymouth University)",
-           url         = 'projects/nesta/wickedpedia',
+           url         = 'projects/wickedpedia',
            img         = "/media/img/projects/wickedpedia.png",
          ) 
       }}
@@ -107,14 +107,16 @@
          ) 
       }}
 
+      {#
       {{ project(
            title       = "Supporter 2 Reporter",
            description = "Build your own news media page, including your own reporting video, about at topic you care about, such as the Olympics. ", 
            author      = "Radio Waves",
-           url         = url('edit_dev_nesta_project', 's2r'),
+           url         = url('edit_project', 's2r'),
            img         = "/media/img/projects/S2r.png",
          ) 
       }}
+      #}
 
       {{ project(
            title       = "Bakery Bash",
@@ -130,7 +132,7 @@
            title       = "Get off my Lawn",
            description = "Clear the zombies away from your garden lawn. Build your own zombies! ", 
            author      = "The Guardian and Goldsmiths",
-           url         = url('edit_dev_nesta_project', 'zombies'),
+           url         = url('edit_project', 'zombies'),
            img         = "/media/img/projects/Zombies.png"
          ) 
       }}
@@ -149,7 +151,7 @@
            title       = "Bunnies",
            description = "Save the bunny from danger or else he will be squashed! ", 
            author      = "Ben O'Steen",
-           url         = url('edit_dev_nesta_project', 'bunnies'),
+           url         = url('edit_project', 'bunnies'),
            img         = "/media/img/projects/Bunny.png",
          ) 
       }}
@@ -169,7 +171,7 @@
            title       = "Cube",
            description = "3D is all the rage these days&mdash;learn how its done in CSS3! Build your own 3D cube from scratch. ", 
            author      = "Laurian Gridinoc",
-           url         = url('edit_dev_nesta_project', 'cube'),
+           url         = url('edit_project', 'cube'),
            img         = "/media/img/projects/Cube.jpg",
          ) 
       }}
@@ -190,7 +192,7 @@
            title       = "Readability",
            description = "Maybe it's bad website design or maybe you are just getting old, but some webpages are impossible to read. Edit the HTML and CSS in this webpage to make it legible. ", 
            author      = "Doug Belshaw",
-           url         = url('edit_dev_nesta_project', 'readability'),
+           url         = url('edit_project', 'readability'),
            img         = "/media/img/projects/Readability.jpg",
          ) 
       }}
