Fixed hardcoded project links

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -51,7 +51,7 @@
            title       = "Awesome Animal Builder",
            description = "Learn about different species and then mix and match animal body parts to create your own&mdash;think: Elephwhal or a Bunnel! ", 
            author      = "The London Zoo",
-           url         = "projects/zoo",
+           url         = url('view_project', 'zoo'),
            img         = "/media/img/projects/Animalbuilder.jpg",
          ) 
       }}
@@ -91,7 +91,7 @@
            title       = "Wickedpedia",
            description = "Build your own celebrity bio pages, including all the scandals and gossip that no one knows about! ", 
            author      = "Steve Bunce and Oliver Quinlan (Plymouth University)",
-           url         = 'projects/wickedpedia',
+           url         = url('view_project', 'wickedpedia'),
            img         = "/media/img/projects/wickedpedia.png",
          ) 
       }}
