--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -28,7 +28,7 @@
       {{ project(
            blurb    = "Build your own Creature",
            author   = "London Zoological Society",
-           url      = "projects/zoo",
+           url      = url('view_project', 'zoo'),
            img      = "/media/img/projects/Animalbuilder.jpg",
          ) 
       }}
