--- a/webpagemaker/learning_projects/templates/learning_projects/zoo.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zoo.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Mozilla Thimble App</title>
-        <link rel="stylesheet" href="//thimbletest.org/media/css/opensans/stylesheet.css">
-        <link rel="stylesheet" href="//thimbletest.org/media/css/press-start/stylesheet.css">
-        <link rel="stylesheet" href="//thimbletest.org/media/css/sandstone.css">
-        <link rel="stylesheet" href="//thimbletest.org/media/css/wpm.css">
+        <link rel="stylesheet" href="/media/css/opensans/stylesheet.css">
+        <link rel="stylesheet" href="/media/css/press-start/stylesheet.css">
+        <link rel="stylesheet" href="/media/css/sandstone.css">
+        <link rel="stylesheet" href="/media/css/wpm.css">
         <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet">
         <style>
         .divider.container {
@@ -42,8 +42,8 @@
                         <div class="row">
                             <div class="span10">
                                 <div class="logo">
-                                    <a href=".">
-                                        <img src="//thimbletest.org/media/img/header_logo.png">
+                                    <a href="/en-US/">
+                                        <img src="/media/img/header_logo.png">
                                     </a>
                                 </div>
                                 <a href="http://www.mozilla.org/" id="tabzilla">Mozilla</a>
@@ -126,7 +126,7 @@
                     <footer id="colophon">
                         <div class="row">
                             <div class="span2">
-                                <h2><img src="//thimbletest.org/media/img/footer-logo.png" alt="Mozilla Thimble App"></h2>
+                                <h2><img src="/media/img/footer-logo.png" alt="Mozilla Thimble App"></h2>
                             </div>
                             <nav class="span2">
                                 <h3>About</h3>
@@ -158,6 +158,6 @@
         </div>
         <script src="//www.mozilla.org/media/js/libs/jquery-1.7.1.min.js"></script>
         <script src="//www.mozilla.org/tabzilla/media/js/tabzilla.js"></script> 
-        <script src="//thimbletest.org/media/js/projects.js"></script>
+        <script src="/media/js/projects.js"></script>
     </body>
 </html>
