Added 'see all projects' link under featured projects

--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -49,6 +49,7 @@
          ) 
       }}
     </ul>
+    <a class="more" href="{{ url('webpagemaker.website.views.projects') }}">See all projects...</a>
   </div> 
 {% endblock %}
 {% macro project(blurb, author, url, img) -%}
