--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -110,6 +110,11 @@ Global styles and classes
     content: "⇧ ";
   }
 
+  .more {
+    float: right;
+    margin: 1em 0;
+  }
+
   .large, 
   .large h1 {
     font-size: 65px;
