Use fancy quotes on the about page (issue #265).

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -21,7 +21,12 @@
           Write and edit HTML and CSS right in your browser.
         </h2>
         <p>
-  Thimble makes it easy to work with HTML and CSS, the building blocks of the web, even if you've never done it before. Just type on the left, then see what the finished page will look like on the right. Thimble also helps check your work as you go, providing a simple "spell check" for code to help you spot and squash errors instantly.
+          Thimble makes it easy to work with HTML and CSS, the building
+          blocks of the web, even if you&rsquo;ve never done it before. Just
+          type on the left, then see what the finished page will look
+          like on the right. Thimble also helps check your work as you
+          go, providing a simple &ldquo;spell&rdquo; check for code to help you spot
+          and squash errors instantly.
         </p>
       </div>
     </div>
@@ -35,7 +40,12 @@
           Share fully functional web pages with one click.
         </h2>
         <p>
-       Thimble isn't just a learning tool or toy. It lets you create your own real, fully functional web pages&mdash;for your band, your pet rock, your business, or whatever&mdash;and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
+          Thimble isn&rsquo;t just a learning tool or toy. It lets you
+          create your own real, fully functional web pages&mdash;for
+          your band, your pet rock, your business, or whatever&mdash;and
+          then share them with a click. There are also plenty of starter
+          projects and templates to help you make something amazing
+          quickly.
         </p>
       </div>
     </div>
@@ -46,10 +56,18 @@
     <div class="row" id="amazing">
       <div class="span7">
         <h2>
-        Webmaking made easy.
+          Webmaking made easy.
         </h2>
         <p>
-        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult&mdash;with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Thimble clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
+          Mozilla is a non-profit that believes everyone should be able
+          to make and share with the open web. But creating, hosting or
+          tweaking your own stuff is often still too
+          difficult&mdash;with obstacles like learning HTML and CSS,
+          struggling with servers to preview your work, or figuring out
+          where your content will live online. Thimble clears away those
+          barriers, making it easier to create your own projects quickly
+          and learn web skills in a way that&rsquo;s easy, visual and
+          fun.
         </p>
       </div>
     </div>
@@ -64,7 +82,7 @@
         </h2>
         <ul>
           <li>
-            Don't just sit there&mdash;make something! 
+            Don&rsquo;t just sit there&mdash;make something! 
             <a href="{{ url('webpagemaker.editor.views.default_editor') }}">Try it out now</a>.
           </li>
           <li>
