--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -88,6 +88,28 @@
 
   <script src="//www.mozilla.org/media/js/libs/jquery-1.7.1.min.js"></script>
   <script src="//www.mozilla.org/tabzilla/media/js/tabzilla.js"></script> 
+  <!-- START OF SmartSource Data Collector TAG v10.2.10 -->
+  <!-- Copyright (c) 2012 Webtrends Inc.  All rights reserved. -->
+  <script>
+    window.webtrendsAsyncInit=function(){
+    var dcs=new Webtrends.dcs().init({
+    dcsid:"dcs33m65wvz5bd4cpn0zyskyo_9z7p",
+    domain:"statse.webtrendslive.com",
+    timezone:-5,
+    fpcdom:".thimble.webmaker.org",
+    plugins:{
+    //hm:{src:"//s.webtrends.com/js/webtrends.hm.js"}
+    }
+    }).track();
+    };
+    (function(){
+    var s=document.createElement("script"); s.async=true; s.src="/media/js/webtrends.min.js";    
+    var s2=document.getElementsByTagName("script")[0]; s2.parentNode.insertBefore(s,s2);
+    }());
+  </script>
+  <noscript><img alt="dcsimg" id="dcsimg" width="1" height="1" src="//statse.webtrendslive.com/dcs33m65wvz5bd4cpn0zyskyo_9z7p/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=10.2.10&amp;dcssip=www.thimble.webmaker.org"/></noscript>
+  <!-- END OF SmartSource Data Collector TAG v10.2.10 -->
+
   {% block scripts %}
   {% endblock %}
 </body>
