About page copy tweaks and removing return to top links

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -8,7 +8,10 @@
       <div class="hero-unit span7">
         <h1 class="large">About</h1>
         <p>
-          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh? <a href="{{ url('webpagemaker.editor.views.default_editor') }}">Try it out now.</a>
+          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh?
+        </p>
+        <p>
+          Don&rsquo;t just sit there&mdash;<a href="{{ url('webpagemaker.editor.views.default_editor') }}">make something!</a>
         </p>
       </div>
     </div>
@@ -18,7 +21,7 @@
     <div class="row" id="write">
       <div class="span7">
         <h2>
-          Write and edit HTML and CSS right in your browser.
+          Write and edit HTML and CSS in your browser.
         </h2>
         <p>
           Thimble makes it easy to work with HTML and CSS, the building
@@ -30,7 +33,6 @@
         </p>
       </div>
     </div>
-    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider">
@@ -49,7 +51,6 @@
         </p>
       </div>
     </div>
-    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider">
@@ -71,7 +72,6 @@
         </p>
       </div>
     </div>
-    <a href="#" class="top">Return to top</a>
   </div>
 
   <div class="container divider-last">
