Fixed zoo project typo

--- a/webpagemaker/learning_projects/templates/learning_projects/zoo.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zoo.html
@@ -67,7 +67,7 @@
                                     <h1>Awesome Animal Builder</h1>
                                 </hgroup>
                                 <p>Create you own unique, weird and totally bizarre Awesome Animal!</p>
-                                <p>We've drawn some of the world's most Evolutionarily Distinct and Globally Endangered animals (EDGE species) for you remix and hack together to create your own awesome animals!</p>
+                                <p>We've drawn some of the world's most Evolutionarily Distinct and Globally Endangered animals (EDGE species) for you to remix and hack together to create your own awesome animals!</p>
                                 <p>EDGE species often have amazing adaptations such as the ability to inject venom through their teeth or to roll up into a ball of yellow spikes! Have a go at building your own awesome animals by mixing adaptations together. </p>
                                 <p>Don't forget to name and describe your new creations for all our friends and family to see.</p>
                                 <p>This was made by the Zoological Society of London (ZSL). Learn more about their work conserving EDGE animals at <a href="http://www.edgeofexistence.org/">EDGE of Existence</a>.</p>
