--- a/webpagemaker/website/templates/website/webarcade.html
+++ b/webpagemaker/website/templates/website/webarcade.html
@@ -88,7 +88,7 @@
 {% macro project(title, description, author, url, img) -%}
   <li class="project">
     <div class="thumb">
-        <a href="{{ href }}">
+        <a href="{{ url }}">
           <img src="{{ img }}" alt="{{ title }}">
         </a>
         <div class="caption">
