Adding Projects and Tools to the footer links.
[Issue #318]

For now I used the Thimble projects for the 'Projects' link. Let me know
if I should use https://webmaker.org/projects/ and I will do just that.

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -76,6 +76,8 @@
           <nav class="span2">
             <h3>Make something!</h3>
             <ul>
+              <li><a href="{{ url('webpagemaker.website.views.projects') }}">Projects</a></li>
+              <li><a href="https://webmaker.org/en-US/tools/">Tools</a></li>
               <li><a href="https://webmaker.org/en-US/events/">Events</a></li>
             </ul>
           </nav>
