--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -60,8 +60,7 @@
             <ul>
               <li><a href="https://webmaker.org/en-US/events/about/summer_campaign/">About Us</a></li>
               <li><a href="mailto:joinmozilla@mozilla.org">Contact Us</a></li>
-              <li><a href="https://webmaker.org/en-US/events/legal/privacy-policy/">Privacy Policy</a></li>
-              <li><a href="https://webmaker.org/en-US/events/legal/terms-of-use/">Terms of Use</a></li>
+              <li><a href="http://www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></li>
               <li><a href="http://www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
             <ul>
           </nav>
