Omit locale from About Us links.

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -58,10 +58,10 @@
           <nav class="span2">
             <h3>About</h3>
             <ul>
-              <li><a href="https://webmaker.org/en-US/events/about/summer_campaign/">About Us</a></li>
+              <li><a href="https://webmaker.org/events/about/summer_campaign/">About Us</a></li>
               <li><a href="mailto:joinmozilla@mozilla.org">Contact Us</a></li>
-              <li><a href="//www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></li>
-              <li><a href="//www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
+              <li><a href="//www.mozilla.org/privacy-policy">Privacy Policy</a></li>
+              <li><a href="//www.mozilla.org/about/legal.html">Legal Notices</a></li>
             <ul>
           </nav>
           <nav class="span2">
