--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -60,8 +60,8 @@
             <ul>
               <li><a href="https://webmaker.org/events/about/summer_campaign/">About Us</a></li>
               <li><a href="mailto:joinmozilla@mozilla.org">Contact Us</a></li>
-              <li><a href="//www.mozilla.org/privacy-policy">Privacy Policy</a></li>
-              <li><a href="//www.mozilla.org/about/legal.html">Legal Notices</a></li>
+              <li><a href="//www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></li>
+              <li><a href="//www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
             <ul>
           </nav>
           <nav class="span2">
