Should be Mozilla Thimble (remove the 'App' part).

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -8,7 +8,11 @@
       <div class="hero-unit span7">
         <h1 class="large">About</h1>
         <p>
-          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh?
+          Mozilla Thimble makes it ridiculously simple to make stuff
+          on the web. Thimble lets you make your own real, fully
+          functional web pages in minutes. Then host and share them with
+          a single click. Sharpen your web skills along the way. Easy,
+          huh?
         </p>
         <p>
           Don&rsquo;t just sit there&mdash;<a href="{{ url('webpagemaker.editor.views.default_editor') }}">make something!</a>
