--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -8,10 +8,13 @@
       <div class="hero-unit span6">
         <hgroup class="large">
           <h2>Webmaking made easy</h2>
-          <h1>Mozilla Thimble App</h1>
+          <h1>Mozilla Thimble</h1>
         </hgroup>
         <p>
-        Mozilla Thimble App makes it ridiculously simple to create your own web pages. Write and edit HTML and CSS right in your browser. Instantly preview your work. Then host and share your finished pages with a single click. Easy, huh?
+          Thimble makes it ridiculously simple to create your own web
+          pages. Write and edit HTML and CSS right in your
+          browser. Instantly preview your work. Then host and share your
+          finished pages with a single click. Easy, huh?
         </p>
         <p><a class="button-blue start" href="{{ url('webpagemaker.editor.views.default_editor') }}">Get started</a></p>
       </div>
