--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -77,7 +77,7 @@
 
        {{ project(
            title       = "Learn HTML fast by making your own web page",
-           description = "Learn HTML basics using Mozilla's Thimble app to make your first web page. This starter project helps you play around with the most common HTML elements and tags using a simple side-by-side visual editor. It's a great way to gain some of the baseline skills you'll need for other Webmaker projects&mdash;or to start a project of your own! If you have no HTML experience, give this one a go first. You'll be surprised by how easy it is to get started.",
+           description = "Learn HTML basics using Mozilla's Thimble to make your first web page. This starter project helps you play around with the most common HTML elements and tags using a simple side-by-side visual editor. It's a great way to gain some of the baseline skills you'll need for other Webmaker projects&mdash;or to start a project of your own! If you have no HTML experience, give this one a go first. You'll be surprised by how easy it is to get started.",
            author      = "Mozilla",
            url         = url('edit_project', 'wrangler'),
            img         = "/media/img/projects/wrangle.png",
