--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -2,7 +2,7 @@
 <html lang="{{ LANG }}" dir="{{ DIR }}">
 <head>
   <meta charset="utf-8">
-  <title>Mozilla Thimble App</title>
+  <title>Mozilla Thimble</title>
   <link rel="stylesheet" href="/media/css/opensans/stylesheet.css">
   <link rel="stylesheet" href="/media/css/press-start/stylesheet.css">
   <link rel="stylesheet" href="/media/css/sandstone.css">
@@ -52,7 +52,7 @@
       <footer id="colophon">
         <div class="row">
           <div class="span2">
-            <h2><img src="/media/img/footer-logo.png" alt="Mozilla Thimble App"></h2>
+            <h2><img src="/media/img/footer-logo.png" alt="Mozilla Thimble"></h2>
           </div>
 
           <nav class="span2">
