--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -27,7 +27,7 @@
           <div class="span10">
             <div class="logo">
               <a href="{{ url('webpagemaker.website.views.home') }}">
-                <img src="/media/img/header_logo.png">
+                <img src="/media/img/thimble-logo.png">
               </a>
             </div>
             <a href="http://www.mozilla.org/" id="tabzilla">Mozilla</a>
