Use consistent text for "Make Project".

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -11,7 +11,7 @@
         </hgroup>
         <p>
           Get your feet wet with Thimble by trying some of our fun projects. 
-          Click 'Make project' to get started.
+          Click &lsquo;Make Project&rsquo; to get started.
         </p>
       </div>
     </div>
