Update copy on project page.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -10,8 +10,12 @@
           <h1>Projects</h1>
         </hgroup>
         <p>
-          Get your feet wet with Thimble by trying some of our fun projects. 
-          Click &lsquo;Make Project&rsquo; to get started.
+          Get your feet wet with Thimble by trying some of our fun
+          projects. Thimble projects are hackable webpages that allow
+          you to complete a challenge, play a game or build something
+          cool by editing the code of the page, and learning webmaking
+          skills like HTML and CSS in the process. Choose a project
+          below that interests you to get started.
         </p>
       </div>
     </div>
