--- a/webpagemaker/learning_projects/templates/learning_projects/zombies.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zombies.html
@@ -26,7 +26,7 @@ So what are CSS positions? Well a CSS position is a way of placing something on 
 */			
 
 /*				
-Now time to play... try and block the zombies by positioning the items on top of them. We'll start will using pixels - you can move the object by changing the number of pixels (px) from the bottom left corner of the screen that you want the item to be.
+Now time to play... try and block the zombies by positioning the items on top of them. We'll start by using pixels - you can move the object by changing the number of pixels (px) from the bottom left corner of the screen that you want the item to be.
 Lets move the cooker...
 */
             #cooker {
@@ -109,10 +109,10 @@ Now try making your own zombies. Find an image of one of your friends, right-cli
 			
 			
 <!--
-Congrats on conquering the zombies and making the game your own! Did you realize you also learning a few things in the process? You actually learned a bunch about CSS positioning - and that's something that stumps a lot of people. Plus you know how to wrangle images in HTML as well. Way to go! Maybe you want to share your game with others! Before doing so, you might want to go back to the top of move all of the barricades back to the bottom of the screen. Don't remember what they were before? That's okay, you are a CSS wizard now, just play around a bit and you'll surprise yourself at how much you know! 
+Congrats on conquering the zombies and making the game your own! Did you realize you were also learning a few things in the process? You actually learned a bunch about CSS positioning - and that's something that stumps a lot of people. Plus you know how to wrangle images in HTML as well. Way to go! Maybe you want to share your game with others! Before doing so, you might want to go back to the top and move all of the barricades back to the bottom of the screen. Don't remember what they were before? That's okay, you are a CSS wizard now, just play around a bit and you'll surprise yourself at how much you know! 
 -->
 			
-<!-- Try not the change this one though or things might not work. -->
+<!-- Try to change this one though or things might not work. -->
 			<img src="{{ HTTP_STATIC_URL }}zombies/zombie-house-inside.png" alt="House" />
 		</section>    
     
