--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -58,8 +58,8 @@
           <nav class="span2">
             <h3>About</h3>
             <ul>
-              <li><a href="https://webmaker.org/events/about/summer_campaign/">About Us</a></li>
-              <li><a href="mailto:joinmozilla@mozilla.org">Contact Us</a></li>
+              <li><a href="{{ url('webpagemaker.website.views.about') }}">About Us</a></li>
+              <li><a href="mailto:mozparty@mozilla.org">Contact Us</a></li>
               <li><a href="//www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></li>
               <li><a href="//www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
             <ul>
