--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mozilla Thimble</title>
+  <link rel="shortcut icon" href="/media/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/media/css/opensans/stylesheet.css">
   <link rel="stylesheet" href="/media/css/press-start/stylesheet.css">
   <link rel="stylesheet" href="/media/css/sandstone.css">
