Synchronizing with webmaker footer: removed ! and added 'Support our work' column

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -73,11 +73,20 @@
           </nav>
 
           <nav class="span2">
-            <h3>Make something!</h3>
+            <h3>Make something</h3>
             <ul>
               <li><a href="{{ url('webpagemaker.website.views.projects') }}">Projects</a></li>
               <li><a href="https://webmaker.org/tools/">Tools</a></li>
               <li><a href="https://webmaker.org/events/">Events</a></li>
+            </ul>
+          </nav>
+
+          <nav class="span2">
+            <h3>Support our work</h3>
+            <ul>
+              <li><a href="https://donate.mozilla.org/page/contribute/join-mozilla?source=join_link">Donate</a></li>
+              <li><a href="https://mozillalabs.com/en-US/">Contribute</a></li>
+              <li><a href="https://donate.mozilla.org/page/contribute/firefoxtshirt">Buy a t-shirt</a></li>
             </ul>
           </nav>
         </div>
