--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -32,7 +32,7 @@
           blocks of the web, even if you&rsquo;ve never done it before. Just
           type on the left, then see what the finished page will look
           like on the right. Thimble also helps check your work as you
-          go, providing a simple &ldquo;spell&rdquo; check for code to help you spot
+          go, providing a simple &ldquo;spell check&rdquo; for code to help you spot
           and squash errors instantly.
         </p>
       </div>
